# flutter_js

./: .gitignore  CHANGELOG.md  FIXED_RESOURCE.txt  README.md  pubspec.yaml
.github/: FUNDING.yml
android/: .project  CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/c/: libfastdev_quickjs_runtime.cpp
android/src/main/c/quickjs/: cutils.c  libregexp.c  libunicode-table.h  libunicode.h  quickjs-atom.h  quickjs-opcode.h  quickjs.c  quickjs.h
android/src/main/kotlin/io/abner/flutter_js/: FlutterJsPlugin.kt  JSEngine.kt
android/src/main/kotlin/io/abner/flutter_js/flutter_js/: FlutterJsPlugin.kt
assets/js/: fetch.js
cxx/: libfastdev_quickjs_runtime.cpp  quickjs.cmake
cxx/quickjs/: VERSION  cutils.h  libregexp-opcode.h  libregexp.c  libregexp.h  list.h  quickjs.c  quickjs.h
doc/: ios_source.html
example/: DESKTOP.md  README.md  pubspec.yaml  script.js
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/io/abner/example/: MainActivity.kt
example/android/app/src/main/kotlin/io/abner/flutter_js/flutter_js_example/: MainActivity.kt
example/android/app/src/main/kotlin/io/abner/flutter_js_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/js/: ajv.js
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: ajv_example.dart  ajv_result_screen.dart  api_call.dart  example.dart  form.dart  json_viewer.dart  main.dart  main2.dart
example/lib/widgets/: fancy_fab.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/ohos/: oh-package.json5
example/ohos/AppScope/: app.json5
example/ohos/AppScope/resources/base/element/: string.json
example/ohos/entry/: oh-package.json5
example/ohos/entry/src/main/ets/plugins/: GeneratedPluginRegistrant.ets
example/ohos/entry/src/main/resources/en_US/element/: string.json
example/ohos/entry/src/main/resources/zh_CN/element/: string.json
example/test/: flutter_js_test.dart  widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_js.podspec
ios/Classes/: Console.swift  Global.swift  SwiftFlutterJsPlugin.swift
lib/: flutter_js.dart  javascript_runtime.dart  js_eval_result.dart  platform_utils.dart
lib/extensions/: fetch.dart  handle_promises.dart  xhr.dart
lib/javascriptcore/: flutter_jscore.dart  jscore_bindings.dart  jscore_runtime.dart
lib/javascriptcore/binding/: js_base.dart  js_context_ref.dart  js_global_context_ref.dart  js_object_ref.dart  js_string_ref.dart  js_typed_array.dart  js_value_ref.dart  jsc_ffi.dart
lib/javascriptcore/jscore/: js_class.dart  js_context.dart  js_context_group.dart  js_object.dart  js_property_name_accumulator.dart  js_property_name_array.dart  js_string.dart  js_value.dart
lib/quickjs/: ffi.dart  isolate.dart  object.dart  qjs_typedefs.dart  quickjs_runtime.dart  quickjs_runtime2.dart  utf8_null_terminated.dart  wrapper.dart
lib/quickjs-sync-server/: local_server.dart  quickjs_oasis_jsbridge.dart
linux/: CMakeLists.txt  flutter_js_plugin.cc
linux/flutter/ephemeral/: generated_config.cmake
macos/: flutter_js.podspec
ohos/: index.ets  oh-package.json5
ohos/src/main/: module.json5
ohos/src/main/ets/components/plugin/: FlutterJsPlugin.ets
test/: flutter_js_test.dart
windows/: CMakeLists.txt  README.md  flutter_js_plugin.cpp
